2005-09-06  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (emit_probe_entries): Disable fault_handler for now.

2005-09-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 1289
	* translate.cxx (lex_cast_qstring): Correct "cast" of object
	to string containing more than one word.
	* tapset.cxx (lex_cast_qstring): Ditto.
	(dwarf_derived_module::emit_probe_entries): Emit and use
	a generic fault_handler.

2005-09-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 1172.
	* staptree.h, staptree.cxx: Make all ::print*(), operator<<
	functions take const staptree objects.
	(literal_string::print): \-prefix double-quotes.
	* translate.cxx (emit_common_header): Add context probe_point field.
	Switch to atomic_t busy flags.
	(emit_module_exit): Use atomic operations for busy flag.
	(visit_*): Use lex_cast_qstring for last_stmt strings.
	* tapsets.cxx (lex_cast_qstring): New function.
	(*::emit_probe_entries): Populate probe_point.  Use atomic operations
	for busy flag.
	* tapset/context.stp (pp): New function.
	* stapfuncs.5.in: Document it.
	* testsuite/buildok/context_test.stp: Test it.

2005-09-04  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (visit_literal_string): \-prefix double-quotes.

2005-09-04  Martin Hunt  <hunt@redhat.com>

	* testsuite/buildok/context_test.stp: New test.
	* tapset/logging.stp (log): Call _stp_printf().
	* stapfuncs.5.in: Add contextinfo funcs.
	* tapset/context.stp: Minor cleanup.

2005-09-03  Frank Ch. Eigler  <fche@elastic.org>

	PR 1187 prime
	* tapset.cxx (literal_stmt_for_local): Don't automgaically copy
	target char*'s to systemtap strings.
	* tapset/conversions.stp (user_string, kernel_string): New functions.
	* stapfuncs.5.in: Document new functions.

2005-09-03  Frank Ch. Eigler  <fche@elastic.org>

	PR 1292, by popular request.
	* parse.cxx (parse_functiondecl): Allow optional value/param type
	declarations.
	* stap.1.in: Document this.
	* tapset/*.stp: Convert most functions accordingly.