@@ -150,6 +150,10 @@ pp:string ()
 Return the probe point associated with the currently running probe handler,
 including alias and wildcard expansion effects.
 
+.TP
+target:long ()
+Returns the pid of the target process.
+
 .SH FILES
 .nh
 .IR /usr/share/systemtap/tapset
