@@ -1,3 +1,15 @@
+2005-09-06  Martin Hunt  <hunt@redhat.com>
+
+	* tapset/context.stp: Add function target().
+	* stapfuncs.5.in (target): Document it.
+	* elaborate.h (struct systemtap_session): Add cmd and target_pid to
+	the struct.
+	* main.cxx (usage): Add secriptions of "-c" and "-x" options.
+	(main): Set s.cmd and s.target_pid.
+	* buildrun.cxx (stringify): Copy this utility func here too.
+	(run_pass): Add new options to set cmd and pid to the stpd
+	command line.
+
 2005-09-06  Frank Ch. Eigler  <fche@redhat.com>
 
 	* tapsets.cxx (emit_probe_entries): Disable fault_handler for now.
